--- a/website/package.json
+++ b/website/package.json
@@ -13,10 +13,12 @@
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
     "@tiptap/starter-kit": "^2.10.3",
+    "axios": "^1.7.9",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.1",
+    "react-toastify": "^10.0.6",
     "yup": "^1.5.0"
   },
   "devDependencies": {
