--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,15 +1,19 @@
+alembic==1.14.0
 beautifulsoup4==4.12.3
 blinker==1.9.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
 Flask==3.1.0
+Flask-Cors==5.0.0
 Flask-Mail==0.10.0
+Flask-Migrate==4.0.7
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
+Mako==1.3.8
 MarkupSafe==3.0.2
 PyJWT==2.10.1
 python-dotenv==1.0.1
