--- a/website/package.json
+++ b/website/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.54.1",
     "react-toastify": "^10.0.6",
+    "socket.io-client": "^4.8.1",
     "yup": "^1.5.0"
   },
   "devDependencies": {
