--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ alembic==1.14.0
 beautifulsoup4==4.12.3
 bidict==0.23.1
 blinker==1.9.0
+cachelib==0.13.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
 click==8.1.7
@@ -9,6 +10,7 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Mail==0.10.0
 Flask-Migrate==4.0.7
+Flask-Session==0.8.0
 Flask-SocketIO==5.4.1
 Flask-SQLAlchemy==3.1.1
 greenlet==3.1.1
@@ -18,14 +20,19 @@ itsdangerous==2.2.0
 Jinja2==3.1.4
 Mako==1.3.8
 MarkupSafe==3.0.2
+msgspec==0.18.6
+psycopg2-binary==2.9.10
 PyJWT==2.10.1
 python-dotenv==1.0.1
 python-engineio==4.10.1
+python-slugify==8.0.4
 python-socketio==5.11.4
+redis==5.2.1
 requests==2.32.3
 simple-websocket==1.1.0
 soupsieve==2.6
 SQLAlchemy==2.0.36
+text-unidecode==1.3
 typing_extensions==4.12.2
 urllib3==2.2.3
 Werkzeug==3.1.3
