--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -24,11 +24,10 @@ http {
         # Proxy to website (frontend)
         location / {
             proxy_pass http://website:3000;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
 
         # Proxy to backend
@@ -49,12 +48,6 @@ http {
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
         }
-
-        # Static file caching (optional)
-        location ~* \.(?:ico|css|js|gif|jpe?g|png|woff2?|eot|ttf|svg)$ {
-            expires 6M;
-            access_log off;
-            add_header Cache-Control "public";
-        }
+       
     }
 }
