--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -7,11 +7,11 @@ WORKDIR /app
 # Copy package.json and pnpm-lock.yaml
 COPY package.json pnpm-lock.yaml ./
 
-ARG API_URL
-ARG SOCKET_URL
+ARG NEXT_PUBLIC_API_URL
+ARG NEXT_PUBLIC_SOCKET_URL
 
-ENV API_URL=$API_URL
-ENV SOCKET_URL=$SOCKET_URL
+ENV NEXT_PUBLIC_API_URL=$NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_SOCKET_URL=$NEXT_PUBLIC_SOCKET_URL
 
 # Install pnpm globally
 RUN npm install -g pnpm
